# kinder-lesson-planner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: refresh-evals.md
.github/workflows/: eval.yml
docs/: demo.tape
observability/: README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml  tempo.yaml
observability/grafana/dashboards/: kinder-genai.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
scripts/: demo.py  export_traces.py  record_runs.py
src/: __init__.py  agent.py  cli.py  evals.py  observability.py  reviewer.py
src/tools/: lesson_file.py  websearch.py
tests/: _helpers.py  conftest.py  test_lessons_eval.py  test_safety_insistence.py
tests/datasets/: lessons.jsonl  safety_insistence.jsonl
tests/fixtures/runs/: a-15-minute-lesson-on-counting-to-10-with-autumn.json  a-20-minute-craft-lesson-where-kids-use-scissors.json  a-20-minute-lesson-on-sharing-and-kindness-built.json  a-short-circle-time-lesson-teaching-the-days-of.json
web/: Dockerfile  __init__.py  app.py
web/static/: index.html
