[project]
name = "kinder-lesson-planner"
version = "0.1.0"
description = "Agentic kindergarten lesson-plan generator with web search and a colorful terminal UI"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "openlit>=1.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
kinder-lesson-planner = "src.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "llm: evaluation tests that call live LLMs (need OPENAI_API_KEY + TAVILY_API_KEY)",
]
